added 2nd video

--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,8 @@ button {
 	color: #4A60CF;
 	font-weight: 500;
 	font-size: 16px;
-	margin-top: 5px;
+	margin-top: 10px;
+	line-height: .8em;
 }
 
 .btn-outline-success {
